parser/y.output

state 0
	$accept: .inputs $end 

	SINGLE_INPUT  shift 2
	FILE_INPUT  shift 3
	EVAL_INPUT  shift 4
	.  error

	inputs  goto 1

state 1
	$accept:  inputs.$end 

	$end  accept
	.  error


state 2
	inputs:  SINGLE_INPUT.single_input 

	NAME  shift 89
	STRING  shift 96
	NUMBER  shift 90
	ELIPSIS  shift 92
	FALSE  shift 95
	NONE  shift 93
	TRUE  shift 94
	ASSERT  shift 50
	ASYNC  shift 28
	AWAIT  shift 85
	BREAK  shift 53
	CLASS  shift 25
	CONTINUE  shift 54
	DEF  shift 24
	DEL  shift 39
	FOR  shift 21
	FROM  shift 59
	GLOBAL  shift 48
	IF  shift 19
	IMPORT  shift 58
	LAMBDA  shift 68
	NONLOCAL  shift 49
	NOT  shift 70
	PASS  shift 40
	RAISE  shift 56
	RETURN  shift 55
	TRY  shift 22
	WHILE  shift 20
	WITH  shift 23
	YIELD  shift 61
	'('  shift 86
	'@'  shift 51
	'*'  shift 66
	'+'  shift 79
	'-'  shift 80
	'~'  shift 81
	'['  shift 87
	'{'  shift 88
	.  error

	strings  goto 91
	single_input  goto 5
	simple_stmt  goto 6
	small_stmts  goto 8
	compound_stmt  goto 7
	small_stmt  goto 18
	expr_stmt  goto 29
	del_stmt  goto 30
	pass_stmt  goto 31
	flow_stmt  goto 32
	import_stmt  goto 33
	global_stmt  goto 34
	nonlocal_stmt  goto 35
	assert_stmt  goto 36
	break_stmt  goto 41
	continue_stmt  goto 42
	return_stmt  goto 43
	raise_stmt  goto 44
	yield_stmt  goto 45
	import_name  goto 46
	import_from  goto 47
	while_stmt  goto 10
	if_stmt  goto 9
	for_stmt  goto 11
	try_stmt  goto 12
	with_stmt  goto 13
	funcdef  goto 14
	async_funcdef  goto 27
	classdef  goto 15
	decorated  goto 16
	async_stmt  goto 17
	expr  goto 72
	star_expr  goto 63
	xor_expr  goto 73
	and_expr  goto 74
	shift_expr  goto 75
	arith_expr  goto 76
	term  goto 77
	factor  goto 78
	power  goto 82
	atom  goto 84
	atom_expr  goto 83
	test_or_star_expr  goto 60
	test  goto 62
	not_test  goto 69
	or_test  goto 64
	and_test  goto 67
	testlist_star_expr  goto 38
	lambdef  goto 65
	comparison  goto 71
	yield_expr  goto 57
	decorator  goto 37
	test_or_star_exprs  goto 52
	decorators  goto 26

state 3
	inputs:  FILE_INPUT.file_input 
	nl_or_stmt: .    (7)

	.  reduce 7 (src line 308)

	file_input  goto 97
	nl_or_stmt  goto 98

state 4
	inputs:  EVAL_INPUT.eval_input 

	NAME  shift 89
	STRING  shift 96
	NUMBER  shift 90
	ELIPSIS  shift 92
	FALSE  shift 95
	NONE  shift 93
	TRUE  shift 94
	AWAIT  shift 85
	LAMBDA  shift 68
	NOT  shift 70
	'('  shift 86
	'+'  shift 79
	'-'  shift 80
	'~'  shift 81
	'['  shift 87
	'{'  shift 88
	.  error

	strings  goto 91
	eval_input  goto 99
	expr  goto 72
	xor_expr  goto 73
	and_expr  goto 74
	shift_expr  goto 75
	arith_expr  goto 76
	term  goto 77
	factor  goto 78
	power  goto 82
	atom  goto 84
	atom_expr  goto 83
	test  goto 102
	not_test  goto 69
	or_test  goto 64
	and_test  goto 67
	testlist  goto 100
	lambdef  goto 65
	comparison  goto 71
	tests  goto 101

state 5
	inputs:  SINGLE_INPUT single_input.    (1)

	.  reduce 1 (src line 265)


state 6
	single_input:  simple_stmt.    (4)

	.  reduce 4 (src line 282)


state 7
	single_input:  compound_stmt.NEWLINE 

	NEWLINE  shift 103
	.  error


state 8
	small_stmts:  small_stmts.';' small_stmt 
	simple_stmt:  small_stmts.optional_semicolon NEWLINE 
	optional_semicolon: .    (72)

	';'  shift 104
	.  reduce 72 (src line 683)

	optional_semicolon  goto 105

state 9
	compound_stmt:  if_stmt.    (164)

	.  reduce 164 (src line 1154)


state 10
	compound_stmt:  while_stmt.    (165)

	.  reduce 165 (src line 1159)


state 11
	compound_stmt:  for_stmt.    (166)

	.  reduce 166 (src line 1163)


state 12
	compound_stmt:  try_stmt.    (167)

	.  reduce 167 (src line 1167)


state 13
	compound_stmt:  with_stmt.    (168)

	.  reduce 168 (src line 1171)


state 14
	compound_stmt:  funcdef.    (169)

	.  reduce 169 (src line 1175)


state 15
	compound_stmt:  classdef.    (170)

	.  reduce 170 (src line 1179)


state 16
	compound_stmt:  decorated.    (171)

	.  reduce 171 (src line 1183)


state 17
	compound_stmt:  async_stmt.    (172)

	.  reduce 172 (src line 1187)


state 18
	small_stmts:  small_stmt.    (74)

	.  reduce 74 (src line 685)


state 19
	if_stmt:  IF.namedexpr_test ':' suite elifs optional_else 

	NAME  shift 107
	STRING  shift 96
	NUMBER  shift 90
	ELIPSIS  shift 92
	FALSE  shift 95
	NONE  shift 93
	TRUE  shift 94
	AWAIT  shift 85
	LAMBDA  shift 68
	NOT  shift 70
	'('  shift 86
	'+'  shift 79
	'-'  shift 80
	'~'  shift 81
	'['  shift 87
	'{'  shift 88
	.  error

	strings  goto 91
	expr  goto 72
	xor_expr  goto 73
	and_expr  goto 74
	shift_expr  goto 75
	arith_expr  goto 76
	term  goto 77
	factor  goto 78
	power  goto 82
	atom  goto 84
	atom_expr  goto 83
	test  goto 108
	not_test  goto 69
	or_test  goto 64
	and_test  goto 67
	namedexpr_test  goto 106
	lambdef  goto 65
	comparison  goto 71

state 20
	while_stmt:  WHILE.namedexpr_test ':' suite optional_else 

	NAME  shift 107
	STRING  shift 96
	NUMBER  shift 90
	ELIPSIS  shift 92
	FALSE  shift 95
	NONE  shift 93
	TRUE  shift 94
	AWAIT  shift 85
	LAMBDA  shift 68
	NOT  shift 70
	'('  shift 86
	'+'  shift 79
	'-'  shift 80
	'~'  shift 81
	'['  shift 87
	'{'  shift 88
	.  error

	strings  goto 91
	expr  goto 72
	xor_expr  goto 73
	and_expr  goto 74
	shift_expr  goto 75
	arith_expr  goto 76
	term  goto 77
	factor  goto 78
	power  goto 82
	atom  goto 84
	atom_expr  goto 83
	test  goto 108
	not_test  goto 69
	or_test  goto 64
	and_test  goto 67
	namedexpr_test  goto 109
	lambdef  goto 65
	comparison  goto 71

state 21
	for_stmt:  FOR.exprlist IN testlist ':' suite optional_else 

	NAME  shift 89
	STRING  shift 96
	NUMBER  shift 90
	ELIPSIS  shift 92
	FALSE  shift 95
	NONE  shift 93
	TRUE  shift 94
	AWAIT  shift 85
	'('  shift 86
	'*'  shift 66
	'+'  shift 79
	'-'  shift 80
	'~'  shift 81
	'['  shift 87
	'{'  shift 88
	.  error

	strings  goto 91
	expr_or_star_expr  goto 112
	expr  goto 113
	star_expr  goto 114
	xor_expr  goto 73
	and_expr  goto 74
	shift_expr  goto 75
	arith_expr  goto 76
	term  goto 77
	factor  goto 78
	power  goto 82
	atom  goto 84
	atom_expr  goto 83
	exprlist  goto 110
	expr_or_star_exprs  goto 111

state 22
	try_stmt:  TRY.':' suite except_clauses 
	try_stmt:  TRY.':' suite except_clauses ELSE ':' suite 
	try_stmt:  TRY.':' suite except_clauses FINALLY ':' suite 
	try_stmt:  TRY.':' suite except_clauses ELSE ':' suite FINALLY ':' suite 

	':'  shift 115
	.  error


state 23
	with_stmt:  WITH.with_items ':' suite 

	NAME  shift 89
	STRING  shift 96
	NUMBER  shift 90
	ELIPSIS  shift 92
	FALSE  shift 95
	NONE  shift 93
	TRUE  shift 94
	AWAIT  shift 85
	LAMBDA  shift 68
	NOT  shift 70
	'('  shift 86
	'+'  shift 79
	'-'  shift 80
	'~'  shift 81
	'['  shift 87
	'{'  shift 88
	.  error

	strings  goto 91
	expr  goto 72
	xor_expr  goto 73
	and_expr  goto 74
	shift_expr  goto 75
	arith_expr  goto 76
	term  goto 77
	factor  goto 78
	power  goto 82
	atom  goto 84
	atom_expr  goto 83
	test  goto 118
	not_test  goto 69
	or_test  goto 64
	and_test  goto 67
	lambdef  goto 65
	comparison  goto 71
	with_item  goto 117
	with_items  goto 116

state 24
	funcdef:  DEF.NAME parameters optional_return_type ':' suite 

	NAME  shift 119
	.  error


state 25
	classdef:  CLASS.NAME optional_arglist_call ':' suite 

	NAME  shift 120
	.  error


state 26
	decorators:  decorators.decorator 
	decorated:  decorators.classdef_or_funcdef 

	ASYNC  shift 126
	CLASS  shift 25
	DEF  shift 24
	'@'  shift 51
	.  error

	funcdef  goto 125
	async_funcdef  goto 124
	classdef  goto 123
	classdef_or_funcdef  goto 122
	decorator  goto 121

state 27
	async_stmt:  async_funcdef.    (173)

	.  reduce 173 (src line 1192)


state 28
	async_funcdef:  ASYNC.funcdef 
	async_stmt:  ASYNC.with_stmt 
	async_stmt:  ASYNC.for_stmt 

	DEF  shift 24
	FOR  shift 21
	WITH  shift 23
	.  error

	for_stmt  goto 129
	with_stmt  goto 128
	funcdef  goto 127

state 29
	small_stmt:  expr_stmt.    (77)

	.  reduce 77 (src line 702)


state 30
	small_stmt:  del_stmt.    (78)

	.  reduce 78 (src line 707)


state 31
	small_stmt:  pass_stmt.    (79)

	.  reduce 79 (src line 711)


state 32
	small_stmt:  flow_stmt.    (80)

	.  reduce 80 (src line 715)


state 33
	small_stmt:  import_stmt.    (81)

	.  reduce 81 (src line 719)


state 34
	small_stmt:  global_stmt.    (82)

	.  reduce 82 (src line 723)


state 35
	small_stmt:  nonlocal_stmt.    (83)

	.  reduce 83 (src line 727)


state 36
	small_stmt:  assert_stmt.    (84)

	.  reduce 84 (src line 731)


state 37
	decorators:  decorator.    (18)

	.  reduce 18 (src line 362)


state 38
	expr_stmt:  testlist_star_expr.annassign 
	expr_stmt:  testlist_star_expr.augassign yield_expr_or_testlist 
	expr_stmt:  testlist_star_expr.equals_yield_expr_or_testlist_star_expr 
	expr_stmt:  testlist_star_expr.    (88)

	PERCEQ  shift 138
	ANDEQ  shift 139
	STARSTAREQ  shift 144
	STAREQ  shift 136
	PLUSEQ  shift 134
	MINUSEQ  shift 135
	ATEQ  shift 146
	DIVDIVEQ  shift 145
	DIVEQ  shift 137
	LTLTEQ  shift 142
	GTGTEQ  shift 143
	HATEQ  shift 141
	PIPEEQ  shift 140
	':'  shift 133
	'='  shift 147
	.  reduce 88 (src line 769)

	annassign  goto 130
	augassign  goto 131
	equals_yield_expr_or_testlist_star_expr  goto 132

state 39
	del_stmt:  DEL.exprlist 

	NAME  shift 89
	STRING  shift 96
	NUMBER  shift 90
	ELIPSIS  shift 92
	FALSE  shift 95
	NONE  shift 93
	TRUE  shift 94
	AWAIT  shift 85
	'('  shift 86
	'*'  shift 66
	'+'  shift 79
	'-'  shift 80
	'~'  shift 81
	'['  shift 87
	'{'  shift 88
	.  error

	strings  goto 91
	expr_or_star_expr  goto 112
	expr  goto 113
	star_expr  goto 114
	xor_expr  goto 73
	and_expr  goto 74
	shift_expr  goto 75
	arith_expr  goto 76
	term  goto 77
	factor  goto 78
	power  goto 82
	atom  goto 84
	atom_expr  goto 83
	exprlist  goto 148
	expr_or_star_exprs  goto 111

state 40
	pass_stmt:  PASS.    (118)

	.  reduce 118 (src line 914)


state 41
	flow_stmt:  break_stmt.    (119)

	.  reduce 119 (src line 920)


state 42
	flow_stmt:  continue_stmt.    (120)

	.  reduce 120 (src line 925)


state 43
	flow_stmt:  return_stmt.    (121)

	.  reduce 121 (src line 929)


state 44
	flow_stmt:  raise_stmt.    (122)

	.  reduce 122 (src line 933)


state 45
	flow_stmt:  yield_stmt.    (123)

	.  reduce 123 (src line 937)


state 46
	import_stmt:  import_name.    (132)

	.  reduce 132 (src line 984)


state 47
	import_stmt:  import_from.    (133)

	.  reduce 133 (src line 989)


state 48
	global_stmt:  GLOBAL.names 

	NAME  shift 150
	.  error

	names  goto 149

state 49
	nonlocal_stmt:  NONLOCAL.names 

	NAME  shift 150
	.  error

	names  goto 151

state 50
	assert_stmt:  ASSERT.test 
	assert_stmt:  ASSERT.test ',' test 

	NAME  shift 89
	STRING  shift 96
	NUMBER  shift 90
	ELIPSIS  shift 92
	FALSE  shift 95
	NONE  shift 93
	TRUE  shift 94
	AWAIT  shift 85
	LAMBDA  shift 68
	NOT  shift 70
	'('  shift 86
	'+'  shift 79
	'-'  shift 80
	'~'  shift 81
	'['  shift 87
	'{'  shift 88
	.  error

	strings  goto 91
	expr  goto 72
	xor_expr  goto 73
	and_expr  goto 74
	shift_expr  goto 75
	arith_expr  goto 76
	term  goto 77
	factor  goto 78
	power  goto 82
	atom  goto 84
	atom_expr  goto 83
	test  goto 152
	not_test  goto 69
	or_test  goto 64
	and_test  goto 67
	lambdef  goto 65
	comparison  goto 71

state 51
	decorator:  '@'.dotted_name optional_arglist_call NEWLINE 

	NAME  shift 154
	.  error

	dotted_name  goto 153

state 52
	test_or_star_exprs:  test_or_star_exprs.',' test_or_star_expr 
	testlist_star_expr:  test_or_star_exprs.optional_comma 
	optional_comma: .    (99)

	','  shift 155
	.  reduce 99 (src line 826)

	optional_comma  goto 156

state 53
	break_stmt:  BREAK.    (124)

	.  reduce 124 (src line 942)


state 54
	continue_stmt:  CONTINUE.    (125)

	.  reduce 125 (src line 948)


state 55
	return_stmt:  RETURN.    (126)
	return_stmt:  RETURN.testlist 

	NAME  shift 89
	STRING  shift 96
	NUMBER  shift 90
	ELIPSIS  shift 92
	FALSE  shift 95
	NONE  shift 93
	TRUE  shift 94
	AWAIT  shift 85
	LAMBDA  shift 68
	NOT  shift 70
	'('  shift 86
	'+'  shift 79
	'-'  shift 80
	'~'  shift 81
	'['  shift 87
	'{'  shift 88
	.  reduce 126 (src line 954)

	strings  goto 91
	expr  goto 72
	xor_expr  goto 73
	and_expr  goto 74
	shift_expr  goto 75
	arith_expr  goto 76
	term  goto 77
	factor  goto 78
	power  goto 82
	atom  goto 84
	atom_expr  goto 83
	test  goto 102
	not_test  goto 69
	or_test  goto 64
	and_test  goto 67
	testlist  goto 157
	lambdef  goto 65
	comparison  goto 71
	tests  goto 101

state 56
	raise_stmt:  RAISE.    (129)
	raise_stmt:  RAISE.test 
	raise_stmt:  RAISE.test FROM test 

	NAME  shift 89
	STRING  shift 96
	NUMBER  shift 90
	ELIPSIS  shift 92
	FALSE  shift 95
	NONE  shift 93
	TRUE  shift 94
	AWAIT  shift 85
	LAMBDA  shift 68
	NOT  shift 70
	'('  shift 86
	'+'  shift 79
	'-'  shift 80
	'~'  shift 81
	'['  shift 87
	'{'  shift 88
	.  reduce 129 (src line 970)

	strings  goto 91
	expr  goto 72
	xor_expr  goto 73
	and_expr  goto 74
	shift_expr  goto 75
	arith_expr  goto 76
	term  goto 77
	factor  goto 78
	power  goto 82
	atom  goto 84
	atom_expr  goto 83
	test  goto 158
	not_test  goto 69
	or_test  goto 64
	and_test  goto 67
	lambdef  goto 65
	comparison  goto 71

state 57
	yield_stmt:  yield_expr.    (128)

	.  reduce 128 (src line 964)


state 58
	import_name:  IMPORT.dotted_as_names 

	NAME  shift 154
	.  error

	dotted_name  goto 161
	dotted_as_name  goto 160
	dotted_as_names  goto 159

state 59
	import_from:  FROM.from_arg IMPORT import_from_arg 

	NAME  shift 154
	ELIPSIS  shift 167
	'.'  shift 166
	.  error

	dot  goto 165
	dots  goto 164
	dotted_name  goto 163
	from_arg  goto 162

state 60
	test_or_star_exprs:  test_or_star_expr.    (95)

	.  reduce 95 (src line 805)


state 61
	yield_expr:  YIELD.    (328)
	yield_expr:  YIELD.FROM test 
	yield_expr:  YIELD.testlist_star_expr 

	NAME  shift 89
	STRING  shift 96
	NUMBER  shift 90
	ELIPSIS  shift 92
	FALSE  shift 95
	NONE  shift 93
	TRUE  shift 94
	AWAIT  shift 85
	FROM  shift 168
	LAMBDA  shift 68
	NOT  shift 70
	'('  shift 86
	'*'  shift 66
	'+'  shift 79
	'-'  shift 80
	'~'  shift 81
	'['  shift 87
	'{'  shift 88
	.  reduce 328 (src line 2151)

	strings  goto 91
	expr  goto 72
	star_expr  goto 63
	xor_expr  goto 73
	and_expr  goto 74
	shift_expr  goto 75
	arith_expr  goto 76
	term  goto 77
	factor  goto 78
	power  goto 82
	atom  goto 84
	atom_expr  goto 83
	test_or_star_expr  goto 60
	test  goto 62
	not_test  goto 69
	or_test  goto 64
	and_test  goto 67
	testlist_star_expr  goto 169
	lambdef  goto 65
	comparison  goto 71
	test_or_star_exprs  goto 52

state 62
	test_or_star_expr:  test.    (97)

	.  reduce 97 (src line 816)


state 63
	test_or_star_expr:  star_expr.    (98)

	.  reduce 98 (src line 821)


state 64
	test:  or_test.    (203)
	test:  or_test.IF or_test ELSE test 
	or_test:  or_test.OR and_test 

	IF  shift 170
	OR  shift 171
	.  reduce 203 (src line 1390)


state 65
	test:  lambdef.    (205)

	.  reduce 205 (src line 1399)


state 66
	star_expr:  '*'.expr 

	NAME  shift 89
	STRING  shift 96
	NUMBER  shift 90
	ELIPSIS  shift 92
	FALSE  shift 95
	NONE  shift 93
	TRUE  shift 94
	AWAIT  shift 85
	'('  shift 86
	'+'  shift 79
	'-'  shift 80
	'~'  shift 81
	'['  shift 87
	'{'  shift 88
	.  error

	strings  goto 91
	expr  goto 172
	xor_expr  goto 73
	and_expr  goto 74
	shift_expr  goto 75
	arith_expr  goto 76
	term  goto 77
	factor  goto 78
	power  goto 82
	atom  goto 84
	atom_expr  goto 83

state 67
	or_test:  and_test.    (210)
	and_test:  and_test.AND not_test 

	AND  shift 173
	.  reduce 210 (src line 1426)


state 68
	lambdef:  LAMBDA.optional_varargslist ':' test 
	optional_varargslist: .    (67)

	NAME  shift 183
	STARSTAR  shift 182
	'*'  shift 181
	.  reduce 67 (src line 658)

	vfpdeftest  goto 178
	vfpdef  goto 180
	vfpdeftests1  goto 176
	optional_varargslist  goto 174
	varargslist  goto 175
	vf_args_kwonly_kwargs  goto 179
	vararglist_no_posonly  goto 177

state 69
	and_test:  not_test.    (212)

	.  reduce 212 (src line 1443)


state 70
	not_test:  NOT.not_test 

	NAME  shift 89
	STRING  shift 96
	NUMBER  shift 90
	ELIPSIS  shift 92
	FALSE  shift 95
	NONE  shift 93
	TRUE  shift 94
	AWAIT  shift 85
	NOT  shift 70
	'('  shift 86
	'+'  shift 79
	'-'  shift 80
	'~'  shift 81
	'['  shift 87
	'{'  shift 88
	.  error

	strings  goto 91
	expr  goto 72
	xor_expr  goto 73
	and_expr  goto 74
	shift_expr  goto 75
	arith_expr  goto 76
	term  goto 77
	factor  goto 78
	power  goto 82
	atom  goto 84
	atom_expr  goto 83
	not_test  goto 184
	comparison  goto 71

state 71
	not_test:  comparison.    (215)
	comparison:  comparison.comp_op expr 

	PLINGEQ  shift 192
	LTEQ  shift 190
	LTGT  shift 191
	EQEQ  shift 188
	GTEQ  shift 189
	IN  shift 193
	IS  shift 195
	NOT  shift 194
	'<'  shift 186
	'>'  shift 187
	.  reduce 215 (src line 1465)

	comp_op  goto 185

state 72
	comparison:  expr.    (216)
	expr:  expr.'|' xor_expr 

	'|'  shift 196
	.  reduce 216 (src line 1470)


state 73
	expr:  xor_expr.    (231)
	xor_expr:  xor_expr.'^' and_expr 

	'^'  shift 197
	.  reduce 231 (src line 1548)


state 74
	xor_expr:  and_expr.    (233)
	and_expr:  and_expr.'&' shift_expr 

	'&'  shift 198
	.  reduce 233 (src line 1558)


state 75
	and_expr:  shift_expr.    (235)
	shift_expr:  shift_expr.LTLT arith_expr 
	shift_expr:  shift_expr.GTGT arith_expr 

	LTLT  shift 199
	GTGT  shift 200
	.  reduce 235 (src line 1568)


state 76
	shift_expr:  arith_expr.    (237)
	arith_expr:  arith_expr.'+' term 
	arith_expr:  arith_expr.'-' term 

	'+'  shift 201
	'-'  shift 202
	.  reduce 237 (src line 1578)


state 77
	arith_expr:  term.    (240)
	term:  term.'*' factor 
	term:  term.'@' factor 
	term:  term.'/' factor 
	term:  term.'%' factor 
	term:  term.DIVDIV factor 

	DIVDIV  shift 207
	'@'  shift 204
	'*'  shift 203
	'/'  shift 205
	'%'  shift 206
	.  reduce 240 (src line 1592)


state 78
	term:  factor.    (243)

	.  reduce 243 (src line 1606)


state 79
	factor:  '+'.factor 

	NAME  shift 89
	STRING  shift 96
	NUMBER  shift 90
	ELIPSIS  shift 92
	FALSE  shift 95
	NONE  shift 93
	TRUE  shift 94
	AWAIT  shift 85
	'('  shift 86
	'+'  shift 79
	'-'  shift 80
	'~'  shift 81
	'['  shift 87
	'{'  shift 88
	.  error

	strings  goto 91
	factor  goto 208
	power  goto 82
	atom  goto 84
	atom_expr  goto 83

state 80
	factor:  '-'.factor 

	NAME  shift 89
	STRING  shift 96
	NUMBER  shift 90
	ELIPSIS  shift 92
	FALSE  shift 95
	NONE  shift 93
	TRUE  shift 94
	AWAIT  shift 85
	'('  shift 86
	'+'  shift 79
	'-'  shift 80
	'~'  shift 81
	'['  shift 87
	'{'  shift 88
	.  error

	strings  goto 91
	factor  goto 209
	power  goto 82
	atom  goto 84
	atom_expr  goto 83

state 81
	factor:  '~'.factor 

	NAME  shift 89
	STRING  shift 96
	NUMBER  shift 90
	ELIPSIS  shift 92
	FALSE  shift 95
	NONE  shift 93
	TRUE  shift 94
	AWAIT  shift 85
	'('  shift 86
	'+'  shift 79
	'-'  shift 80
	'~'  shift 81
	'['  shift 87
	'{'  shift 88
	.  error

	strings  goto 91
	factor  goto 210
	power  goto 82
	atom  goto 84
	atom_expr  goto 83

state 82
	factor:  power.    (252)

	.  reduce 252 (src line 1645)


state 83
	power:  atom_expr.    (253)
	power:  atom_expr.STARSTAR factor 

	STARSTAR  shift 211
	.  reduce 253 (src line 1650)


state 84
	atom_expr:  atom.trailers 
	trailers: .    (257)

	.  reduce 257 (src line 1671)

	trailers  goto 212

state 85
	atom_expr:  AWAIT.atom trailers 

	NAME  shift 89
	STRING  shift 96
	NUMBER  shift 90
	ELIPSIS  shift 92
	FALSE  shift 95
	NONE  shift 93
	TRUE  shift 94
	'('  shift 86
	'['  shift 87
	'{'  shift 88
	.  error

	strings  goto 91
	atom  goto 213

state 86
	atom:  '('.')' 
	atom:  '('.yield_expr ')' 
	atom:  '('.namedexpr_test_or_star_expr comp_for ')' 
	atom:  '('.namedexpr_tests_or_star_exprs optional_comma ')' 

	NAME  shift 107
	STRING  shift 96
	NUMBER  shift 90
	ELIPSIS  shift 92
	FALSE  shift 95
	NONE  shift 93
	TRUE  shift 94
	AWAIT  shift 85
	LAMBDA  shift 68
	NOT  shift 70
	YIELD  shift 61
	'('  shift 86
	')'  shift 214
	'*'  shift 66
	'+'  shift 79
	'-'  shift 80
	'~'  shift 81
	'['  shift 87
	'{'  shift 88
	.  error

	strings  goto 91
	expr  goto 72
	star_expr  goto 219
	xor_expr  goto 73
	and_expr  goto 74
	shift_expr  goto 75
	arith_expr  goto 76
	term  goto 77
	factor  goto 78
	power  goto 82
	atom  goto 84
	atom_expr  goto 83
	test  goto 108
	not_test  goto 69
	or_test  goto 64
	and_test  goto 67
	namedexpr_test  goto 218
	namedexpr_test_or_star_expr  goto 216
	lambdef  goto 65
	comparison  goto 71
	yield_expr  goto 215
	namedexpr_tests_or_star_exprs  goto 217

state 87
	atom:  '['.']' 
	atom:  '['.namedexpr_test_or_star_expr comp_for ']' 
	atom:  '['.namedexpr_tests_or_star_exprs optional_comma ']' 

	NAME  shift 107
	STRING  shift 96
	NUMBER  shift 90
	ELIPSIS  shift 92
	FALSE  shift 95
	NONE  shift 93
	TRUE  shift 94
	AWAIT  shift 85
	LAMBDA  shift 68
	NOT  shift 70
	'('  shift 86
	'*'  shift 66
	'+'  shift 79
	'-'  shift 80
	'~'  shift 81
	'['  shift 87
	']'  shift 220
	'{'  shift 88
	.  error

	strings  goto 91
	expr  goto 72
	star_expr  goto 219
	xor_expr  goto 73
	and_expr  goto 74
	shift_expr  goto 75
	arith_expr  goto 76
	term  goto 77
	factor  goto 78
	power  goto 82
	atom  goto 84
	atom_expr  goto 83
	test  goto 108
	not_test  goto 69
	or_test  goto 64
	and_test  goto 67
	namedexpr_test  goto 218
	namedexpr_test_or_star_expr  goto 221
	lambdef  goto 65
	comparison  goto 71
	namedexpr_tests_or_star_exprs  goto 222

state 88
	atom:  '{'.'}' 
	atom:  '{'.dictorsetmaker '}' 

	NAME  shift 89
	STRING  shift 96
	NUMBER  shift 90
	STARSTAR  shift 230
	ELIPSIS  shift 92
	FALSE  shift 95
	NONE  shift 93
	TRUE  shift 94
	AWAIT  shift 85
	LAMBDA  shift 68
	NOT  shift 70
	'('  shift 86
	'*'  shift 66
	'+'  shift 79
	'-'  shift 80
	'~'  shift 81
	'['  shift 87
	'{'  shift 88
	'}'  shift 223
	.  error

	strings  goto 91
	expr  goto 72
	star_expr  goto 63
	star_star_expr  goto 227
	xor_expr  goto 73
	and_expr  goto 74
	shift_expr  goto 75
	arith_expr  goto 76
	term  goto 77
	factor  goto 78
	power  goto 82
	atom  goto 84
	atom_expr  goto 83
	test_or_star_expr  goto 229
	test  goto 226
	not_test  goto 69
	or_test  goto 64
	and_test  goto 67
	lambdef  goto 65
	comparison  goto 71
	dictorsetmaker  goto 224
	test_or_star_exprs  goto 228
	test_colon_tests  goto 225

state 89
	atom:  NAME.    (270)

	.  reduce 270 (src line 1742)


state 90
	atom:  NUMBER.    (271)

	.  reduce 271 (src line 1746)


state 91
	strings:  strings.STRING 
	atom:  strings.    (272)

	STRING  shift 231
	.  reduce 272 (src line 1750)


state 92
	atom:  ELIPSIS.    (273)

	.  reduce 273 (src line 1761)


state 93
	atom:  NONE.    (274)

	.  reduce 274 (src line 1765)


state 94
	atom:  TRUE.    (275)

	.  reduce 275 (src line 1769)


state 95
	atom:  FALSE.    (276)

	.  reduce 276 (src line 1773)


state 96
	strings:  STRING.    (259)

	.  reduce 259 (src line 1680)


state 97
	inputs:  FILE_INPUT file_input.    (2)

	.  reduce 2 (src line 271)


state 98
	file_input:  nl_or_stmt.ENDMARKER 
	nl_or_stmt:  nl_or_stmt.NEWLINE 
	nl_or_stmt:  nl_or_stmt.stmt 

	NEWLINE  shift 233
	ENDMARKER  shift 232
	NAME  shift 89
	STRING  shift 96
	NUMBER  shift 90
	ELIPSIS  shift 92
	FALSE  shift 95
	NONE  shift 93
	TRUE  shift 94
	ASSERT  shift 50
	ASYNC  shift 28
	AWAIT  shift 85
	BREAK  shift 53
	CLASS  shift 25
	CONTINUE  shift 54
	DEF  shift 24
	DEL  shift 39
	FOR  shift 21
	FROM  shift 59
	GLOBAL  shift 48
	IF  shift 19
	IMPORT  shift 58
	LAMBDA  shift 68
	NONLOCAL  shift 49
	NOT  shift 70
	PASS  shift 40
	RAISE  shift 56
	RETURN  shift 55
	TRY  shift 22
	WHILE  shift 20
	WITH  shift 23
	YIELD  shift 61
	'('  shift 86
	'@'  shift 51
	'*'  shift 66
	'+'  shift 79
	'-'  shift 80
	'~'  shift 81
	'['  shift 87
	'{'  shift 88
	.  error

	strings  goto 91
	simple_stmt  goto 235
	stmt  goto 234
	small_stmts  goto 8
	compound_stmt  goto 236
	small_stmt  goto 18
	expr_stmt  goto 29
	del_stmt  goto 30
	pass_stmt  goto 31
	flow_stmt  goto 32
	import_stmt  goto 33
	global_stmt  goto 34
	nonlocal_stmt  goto 35
	assert_stmt  goto 36
	break_stmt  goto 41
	continue_stmt  goto 42
	return_stmt  goto 43
	raise_stmt  goto 44
	yield_stmt  goto 45
	import_name  goto 46
	import_from  goto 47
	while_stmt  goto 10
	if_stmt  goto 9
	for_stmt  goto 11
	try_stmt  goto 12
	with_stmt  goto 13
	funcdef  goto 14
	async_funcdef  goto 27
	classdef  goto 15
	decorated  goto 16
	async_stmt  goto 17
	expr  goto 72
	star_expr  goto 63
	xor_expr  goto 73
	and_expr  goto 74
	shift_expr  goto 75
	arith_expr  goto 76
	term  goto 77
	factor  goto 78
	power  goto 82
	atom  goto 84
	atom_expr  goto 83
	test_or_star_expr  goto 60
	test  goto 62
	not_test  goto 69
	or_test  goto 64
	and_test  goto 67
	testlist_star_expr  goto 38
	lambdef  goto 65
	comparison  goto 71
	yield_expr  goto 57
	decorator  goto 37
	test_or_star_exprs  goto 52
	decorators  goto 26

state 99
	inputs:  EVAL_INPUT eval_input.    (3)

	.  reduce 3 (src line 276)


state 100
	eval_input:  testlist.nls ENDMARKER 
	nls: .    (11)

	.  reduce 11 (src line 328)

	nls  goto 237

state 101
	tests:  tests.',' test 
	testlist:  tests.optional_comma 
	optional_comma: .    (99)

	','  shift 238
	.  reduce 99 (src line 826)

	optional_comma  goto 239

state 102
	tests:  test.    (160)

	.  reduce 160 (src line 1133)


state 103
	single_input:  compound_stmt NEWLINE.    (5)

	.  reduce 5 (src line 294)


state 104
	optional_semicolon:  ';'.    (73)
	small_stmts:  small_stmts ';'.small_stmt 

	NAME  shift 89
	STRING  shift 96
	NUMBER  shift 90
	ELIPSIS  shift 92
	FALSE  shift 95
	NONE  shift 93
	TRUE  shift 94
	ASSERT  shift 50
	AWAIT  shift 85
	BREAK  shift 53
	CONTINUE  shift 54
	DEL  shift 39
	FROM  shift 59
	GLOBAL  shift 48
	IMPORT  shift 58
	LAMBDA  shift 68
	NONLOCAL  shift 49
	NOT  shift 70
	PASS  shift 40
	RAISE  shift 56
	RETURN  shift 55
	YIELD  shift 61
	'('  shift 86
	'*'  shift 66
	'+'  shift 79
	'-'  shift 80
	'~'  shift 81
	'['  shift 87
	'{'  shift 88
	.  reduce 73 (src line 683)
